--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -40,7 +40,7 @@
                     {# <li class="active"><a href="{% url 'index' %}">Main</a></li> #}
                     <li class="active"><a href="{% url 'index' %}">Main</a></li>
                     <li><a href="{% url 'contact' %}">Contacts</a></li>
-                    <li><a href="{% url 'student_list' %}">Students</a></li>
+                    <li><a href="{% url 'students:list_view' %}">Students</a></li>
                     <li><a href="{% url 'results' %}">Equation</a></li>
                 </ul>
             </div>
@@ -51,28 +51,87 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="well">
-                    <h1>Bursa</h1>
-                    <p>Данное направление позволяет освоить одну из самых популярных специальностей в IT-индустрии – программист. Немаловажным фактором является то, что слушателям предоставляется возможность ознакомиться с разными направлениями в программировании и выбрать для себя наиболее подходящий вариант. В программу курса включаются все аспекты программирования – начиная от основ алгоритмизации и заканчивая новейшими инструментариями используемыми в современной индустрии. Также в курс включаются предметы выходящие за рамки программирования, где слушатели знакомятся с основами проектирования, построением сложных систем и управлением программными проектами.</p>
-                </div>
-                	
-                <h2>Program</h2>
-                <table class="table table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th>Курс</th>
-                            <th>Описание</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for course in courses %}
+                <div class="well student_detail">
+                    <h2>{{ student.surname }} {{ student.name }}</h2>
+                    <img src="{% static 'images/face.jpg' %}" alt="img">
+
+                    <table class="table table-striped table-hover">
+                        <tbody>
                             <tr>
-                                <td>{{ course.name }}</td> 
-                                <td>{{ course.description }}</td> 
+                                <td>Дата рождения</td>
+                                <td>{{ student.date_of_birth }}</td>
                             </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                            <tr>
+                                <td>адрес</td>
+                                <td>{{ student.address }}</td>
+                            </tr>
+                            <tr>
+                                <td>почта</td>
+                                <td>{{ student.email }}</td>
+                            </tr>
+                            <tr>
+                                <td>логин skype</td>
+                                <td>{{ student.skype }}</td>
+                            </tr>
+                            <tr>
+                                <td>телефон</td>
+                                <td>{{ student.phone }}</td>
+                            </tr>
+                             <td>Courses</td><td>{% for course in student.courses.all %}<a href="{% url 'courses:detail' course.id %}">{{ course }}</a><br>{% endfor %}</td>
+                        </tbody>
+                    </table>
+                    <h3>Perfomance</h3>
+                    <table class="table table-hover perfomance">
+                        <thead>
+                            <th>Course</th>
+                            <th>Week</th>
+                            <th>Control Type</th>
+                            <th>Grade</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>PyBursa</td>
+                                <td>Week1</td>
+                                <td>Tests</td>
+                                <td>99%</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td>Problem Tasks №1</td>
+                                <td>98%</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td>Problem Tasks №2</td>
+                                <td>100%</td>
+                            </tr>
+
+                            <tr>
+                                <td></td>
+                                <td>Week2</td>
+                                <td>Tests</td>
+                                <td>100%</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td>Problem Tasks №1</td>
+                                <td>99%</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td>Problem Tasks №2</td>
+                                <td>95%</td>
+                            </tr>
+                           
+                        </tbody>
+                    </table>
+                </div>
+                
+            </div>
             </div>
         </div>
     </div>
