--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -38,9 +38,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     {# <li class="active"><a href="{% url 'index' %}">Main</a></li> #}
-                    <li class="active"><a href="{% url 'index' %}">Main</a></li>
+                    <li><a href="{% url 'index' %}">Main</a></li>
                     <li><a href="{% url 'contact' %}">Contacts</a></li>
-                    <li><a href="{% url 'student_list' %}">Students</a></li>
+                    <li class="active"><a href="{% url 'students:list_view' %}">Students</a></li>     
                     <li><a href="{% url 'results' %}">Equation</a></li>
                 </ul>
             </div>
@@ -51,24 +51,30 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="well">
-                    <h1>Bursa</h1>
-                    <p>Данное направление позволяет освоить одну из самых популярных специальностей в IT-индустрии – программист. Немаловажным фактором является то, что слушателям предоставляется возможность ознакомиться с разными направлениями в программировании и выбрать для себя наиболее подходящий вариант. В программу курса включаются все аспекты программирования – начиная от основ алгоритмизации и заканчивая новейшими инструментариями используемыми в современной индустрии. Также в курс включаются предметы выходящие за рамки программирования, где слушатели знакомятся с основами проектирования, построением сложных систем и управлением программными проектами.</p>
-                </div>
                 	
-                <h2>Program</h2>
-                <table class="table table-striped table-hover">
+                <h2>Список курса PyBursa</h2>
+                <table class="table table-striped table-hover list_student">
                     <thead>
                         <tr>
-                            <th>Курс</th>
-                            <th>Описание</th>
+                            <th>#</th>
+                            <th>фамилия имя</th>
+                            <th>адрес</th>
+                            <th>Skype</th>
+                            <th>курсы</th>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for course in courses %}
+                        {% for list_student in list_students %}
                             <tr>
-                                <td>{{ course.name }}</td> 
-                                <td>{{ course.description }}</td> 
+                                <td>{{ list_student.id }}</td> 
+                                <td><a href="{% url 'students:detail' list_student.id %}">{{ list_student.surname }} {{ list_student.name }}</a></td> 
+                                <td>{{ list_student.address }}</td> 
+                                <td>{{ list_student.skype }}</td> 
+                                <td>
+                                    {% for course in list_student.courses.all %}
+                                        <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
+                                    {% endfor %}
+                                </td> 
                             </tr>
                         {% endfor %}
                     </tbody>
