--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -40,7 +40,7 @@
                     {# <li class="active"><a href="{% url 'index' %}">Main</a></li> #}
                     <li><a href="{% url 'index' %}">Main</a></li>
                     <li><a href="{% url 'contact' %}">Contacts</a></li>
-                    <li><a href="{% url 'students:list_view' %}">Students</a></li>
+                    <li><a href="{% url 'students:list_view' %}?course_id={{courses.id}}">Students</a></li>
                     <li><a href="{% url 'results' %}">Equation</a></li>
                 </ul>
             </div>
