--- a/templates/index.html
+++ b/templates/index.html
@@ -8,71 +8,63 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-		<linc href="{% static 'css/style.css' %}" rel="stylesheet">
+		<link href="{% static 'css/style.css' %}" rel="stylesheet">
 
     <title>Main</title>
 
-    <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Custom styles for this template -->
    
   </head>
-<body>
-	<div class="navbar-wrapper">
+	<body>
 		<div class="container">
-	    <nav class="navbar navbar-inverse navbar-static-top">
-		  	<div class="container">
-		  	  <div class="navbar-header">
-		  	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-		  	      <span class="sr-only">Toggle navigation</span>
-		          <span class="icon-bar"></span>
-		          <span class="icon-bar"></span>
-		          <span class="icon-bar"></span>
-		        </button>
-		  	    	
-		      </div>
-		      <div id="navbar" class="navbar-collapse collapse">
-		        <ul class="nav navbar-nav">
-		  	      <li class="active"><a href="{% url 'index' %}">Main</a></li>
-		          <li><a href="{% url 'contact' %}">Contacts</a></li>
-		          <li><a href="{% url 'student_list' %}">Students</a></li>
-		        </ul>
-		      </div>
-		    </div>
-		  </nav>
+			<div class="navbar">
+				<div class="navbar-inner">
+		      <ul class="nav nav-pills">
+						<li><a href="{% url 'index' %}">Главная</a></li>
+						<li><a href="{% url 'contact' %}">Контакты</a></li>
+						<li><a href="{% url 'students:list_view' %}">Студенты</a></li>
+					</ul>	
+				</div>
+			</div>
 		</div>
-	</div>
-	<hr class="featurette-divider">
-	<div class="row featurette">
-	  <div class="col-md-7 col-md-push-1">
-			<h2>Description</h2>
-	    <h2 class="featurette-heading" align=center>Program <span class="text-muted">PyBursa</span></h2>
-      <p class="lead">Курс подразумевает, что студенты уже освоили базовый python. 
-В рамках курса даются азы html/css, достаточные для формирования html страниц браузеру, но не достаточные для профессиональной верстки.
-Глубина освоения django будет достаточной для самостоятельного написания web-проектов, которые содержат редактируемые страницы, структуру специфических данных, отображение их на фронтенде и создание-редактирование этих данных.
-Все разделы django будут освещены.</p>
+		<div class="container">
+			<div class="hero-unit">
+				<h1>IT-Bursa</h1>
+				<p>Курсы ItBursa начали работу в 2014 году. Мы специализируемся на «модных» языках программирования. Принципиальное наше отличие от других курсов – максимум практики и жесткая система обязательных домашних заданий. Преподаватели – опытные практикующие разработчики, они помогают участникам в ходе курсов создать реальные проекты и получить практические навыки, применимые к работе. Домашние задания на наших курсах обязательны и их невыполнение приводит к исключению с курсов. Таким образом, мы готовим не просто «слушателей» курсов, а настоящих специалистов, способных создавать пусть простые, но рабочие проекты.</p>
+			</div>
+			<div class="col-md-10 col-md-push-1">
+				<h2 class="sub-header">Выбирайте курс</h2>
+				<div class="table-responsive">
+					<table class="table" border=2>
+						<thead>
+						  <tr>
+						    <th>Курс</th>
+					      <th>Описание</th>
+					    </tr>
+					  </thead>
+						<tbody>
+							{% for cour in courses %}
+					    <tr>
+						    <td>
+									<a href = "{% url 'courses:detail' cour.id %}">{{cour.name}}</a>
+								</td>
+								<td>
+									{{cour.short_description}}
+					    </tr>
+							{% endfor %}
+						</tbody>
+					</table>
+				</div>
+			</div>
 		</div>
-    <div class="col-md-5">
-	    <img src="{% static 'images/python-logo.png' %}" alt="Generic placeholder image">
-    </div>
-  </div>
-	<hr class="featurette-divider">
-	<script src="{% static 'js/jquery.min.js' %}"></script>
+		<script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
     <script src="{% static 'js/vendor/holder.min.js' %}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
-  </body>
+
+
+	</body>
 </html>
