--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -70,11 +70,7 @@
                                 <td><a href="{% url 'students:detail' list_student.id %}">{{ list_student.surname }} {{ list_student.name }}</a></td> 
                                 <td>{{ list_student.address }}</td> 
                                 <td>{{ list_student.skype }}</td> 
-                                <td>
-                                    {% for course in list_student.courses.all %}
-                                        <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
-                                    {% endfor %}
-                                </td> 
+                                <td>{% for course in list_student.courses.all %}<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>{% endfor %}</td> 
                             </tr>
                         {% endfor %}
                     </tbody>
