--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -54,11 +54,12 @@
         <td>{{ student.address }}</td>
         <td>{{ student.skype }}</td>
         <td>
-            
+            {% for course in student.courses.all %}
+                <p><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></p>
+            {% endfor %} 
         </td>
         
       </tr>
-      
     {% endfor %}
     </tbody>
   </table>
