--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -22,7 +22,7 @@
          <li><a href="{% url 'index' %}">Главная</a></li>
          
          <li><a href="{% url 'contact' %}">Контакты</a></li>
-         <li><a href="{% url 'students:list_view' %}?course_id={{ course.id }}"">Студенты</a></li>
+         <li><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Студенты</a></li>
          
          </li>
         </ul>
