--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -83,10 +83,9 @@
 
                 <td>
                     {% for course in courses %}
-                    <a href="{% url 'courses:detail' coach.id %}">{{ course.name }}</a>Студенты курса
+                    <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a>Студенты курса
                     <a href="{% url 'students:list_view' %}?course_id={{ course.id }}"><span class="glyphicons glyphicons-rugby"></span></a> {% endfor %}
                 </td>
-
             </tr>
             <tr>
                 <td>
@@ -98,7 +97,6 @@
                     <a href="{% url 'courses:detail' assistant.id %}">{{ assistant.name }}</a>студенты курса
                     <a href="{% url 'students:list_view' %}?course_id={{ assistant.id }}"><span class="glyphicons glyphicons-rugby"></span></a> {% endfor %}
                 </td>
-
             </tr>
         </table>
     </div>
@@ -109,9 +107,7 @@
             </li>
         </ul>
     </nav>
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </body>
-
 </html>
