--- a/templates/contact.html
+++ b/templates/contact.html
@@ -99,6 +99,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static "js/bootstrap.js" %}"></script>
   </body>
 </html>	
