--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -39,7 +39,7 @@
       <ul class="nav navbar-nav">
         <li><a href="{% url 'index' %}">Main</a></li>
         <li><a href="{% url 'contact' %}">Contacts</a></li>
-        <li><a href="{% url 'students:list' %}">Students</a></li>
+        <li><a href="{% url 'students:list_view' %}">Students</a></li>
       
       </ul>
      
@@ -50,7 +50,7 @@
 	</nav>
 	<nav>
   	<ul class=" color pager">
-    <li><a href="{% url 'students:list' %}">Previous</a></li>
+    <li><a href="{% url 'students:list_view' %}">Previous</a></li>
   	
     </ul>
 </nav>
