--- a/students/templates/students/list.html
+++ b/students/templates/students/list.html
@@ -43,7 +43,7 @@
        
         <li><a href="{% url 'index' %}">Main</a></li>
         <li><a href="{% url 'contact' %}">Contacts</a></li>
-        <li><a href="{% url 'students:list' %}">Students</a></li>
+        <li><a href="{% url 'students:list_view' %}">Students</a></li>
       </ul>
       </li>
       </ul>
