--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,5 +1,4 @@
 {% load staticfiles %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Main Page</title>
+    <title>Bursa</title>
     <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
@@ -32,75 +31,74 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static "images/logo.jpg" alt="img" %}"></a>
+            <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static "images/logo.jpg" %}" alt="img"></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
+
                 <li><a href="{% url 'index' %}">Main</a></li>
-                <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-                <li><a href="{% url 'students:list_view' %}">Students</a></li>
+                <li><a href="{% url 'contact' %}">Contacts</a></li>
+                <li><a href="{% url 'students:list_view' %}?course_id={{ courses.id }}">Students</a></li>
                 <li><a href="{% url 'results' %}">Equation</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
-        </div>
+    </div>
     <!-- /.container-fluid -->
 </nav>
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="dark-orange">Our command</h1>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="../static/images/director.jpg" alt="image">
+            <div class="well">
+                <h1>{{ courses }}</h1>
 
-                <div class="caption">
-                    <h3 class="blue">Director</h3>
-                    <ul>
-                        <li>Name: <span class="red">Director</span></li>
-                        <li>Skype: <span class="green">Director.111</span></li>
-                        <li>Email: <span class="orange">example@gmail.com</span></li>
-                        <li>Phone: <span class="purple">0630000000</span></li>
-                    </ul>
+                <p>{{ courses.description }}</p>
+            </div>
+            <h2>Преподаватели</h2>
+
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Учитель</h3>
+                </div>
+                <div class="panel-body">
+                    <a href="{% url 'coaches:detail' courses.coach.id %}">{{ coaches }}</a>
+
+                    <p>{{ courses.coach.description }}</p>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="../static/images/manager.jpg" alt="image">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Ассистент</h3>
+                </div>
+                <div class="panel-body">
+                    <a href="{% url 'coaches:detail' courses.assistant.id %}">{{ assistants }}</a>
 
-                <div class="caption">
-                    <h3 class="blue">Manager</h3>
-                    <ul>
-                        <li>Name: <span class="red">Manager</span></li>
-                        <li>Skype: <span class="green">Manager.111</span></li>
-                        <li>Email: <span class="orange">example@gmail.com</span></li>
-                        <li>Phone: <span class="purple">0630000000</span></li>
-                    </ul>
+                    <p>{{ courses.assistant.description }}</p>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="../static/images/founder.jpg" alt="image">
-
-                <div class="caption">
-                    <h3 class="blue">Founder</h3>
-                    <ul>
-                        <li>Name: <span class="red">Founder</span></li>
-                        <li>Skype: <span class="green">Founder.111</span></li>
-                        <li>Email: <span class="orange">example@gmail.com</span></li>
-                        <li>Phone: <span class="purple">0630000000</span></li>
-                    </ul>
-                </div>
-            </div>
+            <h2>Program about {{ courses }}</h2>
+            <table class="table table-striped table-hover">
+                <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Тема</th>
+                    <th>Описание</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for lesson in lessons %}
+                    <tr>
+                        <td>{{ lesson.order }}</td>
+                        <td>{{ lesson.subject }}</td>
+                        <td>{{ lesson.description }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
-    </div>
+</div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
