--- a/templates/contact.html
+++ b/templates/contact.html
@@ -44,10 +44,10 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="{% url 'index' %}">Main</a></li>
-          <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-          <li><a href="{% url 'student_list' %}">Students</a></li>
-          <li><a href="{% url 'results' %}">Equation</a></li>
+            <li><a href="{% url 'index' %}">Главная</a></li>
+            <li class="active"><a href="{% url 'contact' %}">Контакты</a></li>
+            <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
+            <!-- <li><a href="{% url 'results' %}">Equation</a></li> -->
         </ul>
       </div>
       <!--/.nav-collapse -->
