--- a/templates/index.html
+++ b/templates/index.html
@@ -41,10 +41,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Главная</a></li>
+            <li><a href="{% url 'index' %}">Главная</a></li>
             <li><a href="{% url 'contact' %}">Контакты</a></li>
             <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
-            <!-- <li><a href="{% url 'results' %}">Equation</a></li> -->
           </ul>
         </div>
         <!--/.nav-collapse -->
@@ -53,7 +52,7 @@
     <!-- Begin page content -->
     <div class="container">
         <h1>Технополис</h1>
-      <p class="text-justify">Цель проекта — готовить квалифицированных веб-разработчиков и системных архитекторов.
+      <p>Цель проекта — готовить квалифицированных веб-разработчиков и системных архитекторов.
         Широкий спектр тем — от базовых, таких как алгоритмы и структуры данных, до тонкостей разработки приложений для мобильных платформ.
       Такие проекты, как Technopolis, важны и для рынка в целом, и в первую очередь — для самих студентов. У молодых специалистов должна быть возможность общаться с экспертами отрасли, пробовать свои силы в реальных проектах, иметь перед глазами вдохновляющие примеры. Мы стремимся создавать площадки для этого: проводим конференции для it-разработчиков, организуем крупнейшую в стране олимпиаду для программистов Technopolis Cup и другие международные чемпионаты.</p>
       <br>
@@ -70,7 +69,7 @@
           <tbody>
             {% for course in courses %}
               <tr>
-                <td class="text-left"><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
+                <td><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
                 <td>{{ course.short_description }}</td>
                 <tr>
                 {% endfor %}
