--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -26,7 +26,7 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="{% url 'index' %}">Main</a></li>
                 <li><a href="{% url 'contact' %}">Contacts</a></li>
-                <li><a href="{% url 'students:list_view' %}">Students</a></li>
+                <li><a href="{% url 'students:list' %}">Students</a></li>
               </ul>
             </div>
           </div>
@@ -36,35 +36,37 @@
     <div class="container">
 
     <div class="container">
-    <h3>Students list</h3>
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <th>Name and Surname</th>
-                <th>Address</th>
-                <th>Skype</th>
-                <th>Course</th>
-              </tr>
-            </thead>
-            <tbody></br></br></br>
-                {% for student in students %}
-                    <tr>
-                        <td>{{ student.id }}</td>
-                        <td><a href="{% url 'students:detail' student.id %}">{{ student.surname }} {{ student.name }}<a></td>
-                        <td>{{ student.address }}</td>
-                        <td>{{ student.skype }}</td>
-                        <td>{% for course in student.courses.all %}
-                              <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
-                            {% endfor %}
-                        </td>
-                    </tr>
-                {% empty %}
-                      <h3>No students</h3>
-                {% endfor %}
-            </tbody>
-          </table>
-        </div>
+    <h2>Students list</h2>
+        <br></br>
+        <br></br>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>Name_Surname</th>
+                    <th>Address</th>
+                    <th>Skype</th>
+                    <th>Course</th>
+                  </tr>
+                </thead>
+                <tbody>
+                    {% for student in students %}
+                        <tr>
+                            <td>{{ student.id }}</td>
+                            <td><a href="{% url 'students:detail' student.id %}">{{ student.surname }} {{ student.name }}<a></td>
+                            <td>{{ student.address }}</td>
+                            <td>{{ student.skype }}</td>
+                            <td>{% for course in student.courses.all %}
+                                  <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
+                                {% endfor %}
+                            </td>
+                        </tr>
+                    {% empty %}
+                          <h3>No students</h3>
+                    {% endfor %}
+                </tbody>
+              </table>
       </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
